--- a/css/style.css
+++ b/css/style.css
@@ -45,6 +45,24 @@
 }
 
 /* Helpers */
+.sans-serif {
+  font-family:
+    -apple-system,
+    BlinkMacSystemFont,
+    avenir next,
+    avenir,
+    helvetica neue,
+    helvetica,
+    ubuntu,
+    roboto,
+    noto,
+    segoe ui,
+    arial,
+    sans-serif;
+}
+.flex-auto {
+  flex: auto;
+}
 .rounded-image {
   border-radius: 4px;
   overflow: hidden;
