Added more stuff

--- a/css/style.css
+++ b/css/style.css
@@ -56,6 +56,19 @@
   box-shadow: 0 15px 35px rgba(50,50,93,.1), 0 5px 15px rgba(0,0,0,.07);
 }
 
+
+.content {
+  overflow: hidden;
+  height: 3.6em;
+  line-height: 1.2em;
+  width: 200px;
+}
+
+div + .more:checked {
+  height: auto;
+}
+
+
 .read-more-state {
   display: none;
 }
